Fixing a couple of bugs and changing the numbers to be center aligned.

--- a/css/mine_dummy.css
+++ b/css/mine_dummy.css
@@ -2,6 +2,7 @@
     width: 20px;
     height: 20px;
     background: #ddd;
+    text-align: center;
 }
 
 #game_grid .red {
